[tool.poetry]
name = "ellens-alien-game"
version = "0.1.0"
description = ""
authors = ["Joel <joel@bridgefund.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
